play sound when timer finishes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
 
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.whitedot.pomodoro_timer.MainViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/black"
         android:paddingStart="85dp"
         android:paddingEnd="85dp">
 
@@ -14,6 +22,7 @@
             android:id="@+id/timer_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:textSize="60sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -23,30 +32,34 @@
             tools:text="10:00" />
 
         <ImageButton
-            android:id="@+id/start_pause_button"
+            android:id="@+id/start_pause_image_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/image_button_round_corner"
+            android:contentDescription="@string/play_button"
+            android:onClick="@{() -> viewModel.startOrPauseTimer()}"
             android:padding="10dp"
             android:src="@drawable/ic_play_arrow"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/stop_button"
+            app:layout_constraintEnd_toStartOf="@+id/stop_image_button"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/timer_text_view"
-            app:layout_constraintVertical_bias="0.75" />
+            app:layout_constraintVertical_bias="0.88" />
 
         <ImageButton
-            android:id="@+id/stop_button"
+            android:id="@+id/stop_image_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/image_button_round_corner"
+            android:contentDescription="@string/pause_button"
+            android:onClick="@{() -> viewModel.stopTimer()}"
             android:padding="10dp"
             android:src="@drawable/ic_stop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/start_pause_button"
+            app:layout_constraintStart_toEndOf="@id/start_pause_image_button"
             app:layout_constraintTop_toBottomOf="@+id/timer_text_view"
-            app:layout_constraintVertical_bias="0.75" />
+            app:layout_constraintVertical_bias="0.88" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
