--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
             android:id="@+id/timer_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="@{() -> viewModel.changeTimerIntervalLength()}"
             android:textColor="@color/white"
             android:textSize="60sp"
             app:layout_constraintBottom_toBottomOf="parent"
