--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,36 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.25"
-            tools:text="10:00" />
+            tools:text="25:00" />
+
+        <TextView
+            android:id="@+id/total_sessions_counter_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="23 hour 59 minutes"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="@+id/timer_text_view"
+            app:layout_constraintStart_toStartOf="@+id/timer_text_view"
+            app:layout_constraintTop_toBottomOf="@+id/timer_text_view" />
+
+        <TextView
+            android:id="@+id/timer_label_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
+            android:paddingBottom="3dp"
+            android:background="@drawable/text_view_square_rounded_corner"
+            android:text="Study"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="@+id/timer_text_view"
+            app:layout_constraintHorizontal_bias="0.489"
+            app:layout_constraintStart_toStartOf="@+id/timer_text_view"
+            app:layout_constraintTop_toBottomOf="@+id/total_sessions_counter_text_view" />
 
         <ImageButton
             android:id="@+id/start_pause_image_button"
