--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,92 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
 
-    <data>
-
-        <variable
-            name="viewModel"
-            type="com.whitedot.pomodoro_timer.MainViewModel" />
-    </data>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/black"
-        android:paddingStart="85dp"
-        android:paddingEnd="85dp">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/timer_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="@{() -> viewModel.changeTimerIntervalLength()}"
-            android:textColor="@color/white"
-            android:textSize="60sp"
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/nav_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:defaultNavHost="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.25"
-            tools:text="25:00" />
-
-        <TextView
-            android:id="@+id/total_sessions_counter_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="23 hour 59 minutes"
-            android:textColor="@color/white"
-            android:textSize="15sp"
-            app:layout_constraintEnd_toEndOf="@+id/timer_text_view"
-            app:layout_constraintStart_toStartOf="@+id/timer_text_view"
-            app:layout_constraintTop_toBottomOf="@+id/timer_text_view" />
-
-        <TextView
-            android:id="@+id/timer_label_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:paddingStart="15dp"
-            android:paddingEnd="15dp"
-            android:paddingBottom="3dp"
-            android:background="@drawable/text_view_square_rounded_corner"
-            android:text="Study"
-            android:textColor="@color/white"
-            android:textSize="15sp"
-            app:layout_constraintEnd_toEndOf="@+id/timer_text_view"
-            app:layout_constraintHorizontal_bias="0.489"
-            app:layout_constraintStart_toStartOf="@+id/timer_text_view"
-            app:layout_constraintTop_toBottomOf="@+id/total_sessions_counter_text_view" />
-
-        <ImageButton
-            android:id="@+id/start_pause_image_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/image_button_round_corner"
-            android:contentDescription="@string/play_button"
-            android:onClick="@{() -> viewModel.startOrPauseTimer()}"
-            android:padding="10dp"
-            android:src="@drawable/ic_play_arrow"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/stop_image_button"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/timer_text_view"
-            app:layout_constraintVertical_bias="0.88" />
-
-        <ImageButton
-            android:id="@+id/stop_image_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/image_button_round_corner"
-            android:contentDescription="@string/pause_button"
-            android:onClick="@{() -> viewModel.stopTimer()}"
-            android:padding="10dp"
-            android:src="@drawable/ic_stop"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/start_pause_image_button"
-            app:layout_constraintTop_toBottomOf="@+id/timer_text_view"
-            app:layout_constraintVertical_bias="0.88" />
+            app:navGraph="@navigation/nav_graph" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
