Replace totalTimeSpent live data with totalTime

--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -68,6 +68,7 @@
             android:onClick="@{() -> viewModel.stopTimer()}"
             android:padding="10dp"
             android:src="@drawable/ic_stop"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/start_pause_image_button"
