--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -44,6 +44,17 @@
             app:layout_constraintTop_toBottomOf="@+id/timer_text_view"
             tools:text="23 hour 59 minutes" />
 
+        <TextView
+            android:id="@+id/timer_date_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="@+id/timer_text_view"
+            app:layout_constraintStart_toStartOf="@+id/timer_text_view"
+            app:layout_constraintTop_toBottomOf="@+id/total_sessions_counter_text_view"
+            tools:text="Date" />
+
         <ImageButton
             android:id="@+id/start_pause_image_button"
             android:layout_width="wrap_content"
@@ -68,7 +79,6 @@
             android:onClick="@{() -> viewModel.stopTimer()}"
             android:padding="10dp"
             android:src="@drawable/ic_stop"
-            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/start_pause_image_button"
